--- a/configuration/templates/account/settings.hbs
+++ b/configuration/templates/account/settings.hbs
@@ -51,7 +51,7 @@
             </p>
           {{/if ~}}
 
-          <div id="change-password-alert" class="alert hidden">
+          <div id="change-password-alert" class="alert hidden bg-error s-rounded x-padding v-margin">
             <span class="alert-message"></span>
           </div>
 
@@ -80,7 +80,7 @@
         <div class="col-4" id="link-unlink">
           <h3>Linked accounts</h3>
 
-          <div id="unlink-provider-alert" class="alert hidden">
+          <div id="unlink-provider-alert" class="alert hidden bg-error s-rounded x-padding v-margin">
             <span class="alert-message"></span>
           </div>
 
@@ -110,7 +110,7 @@
 
           <h3>Available providers</h3>
 
-          <div id="link-provider-alert" class="alert hidden">
+          <div id="link-provider-alert" class="alert hidden bg-error s-rounded x-padding v-margin">
             <span class="alert-message"></span>
           </div>
 
@@ -141,6 +141,11 @@
 
         <div class="col-4">
           <h3>Account data</h3>
+
+          <div id="delete-account-alert" class="alert hidden bg-error s-rounded x-padding v-margin">
+            <span class="alert-message"></span>
+          </div>
+
           <!-- <button type="button" class="btn v-margin" onclick="exportUserData();">
             Export account settings
           </button>
@@ -174,7 +179,7 @@
         <div id="action-description"></div>
         <hr />
         <div id="re-authentication-form">
-          <div id="re-authenticate-alert" class="alert hidden">
+          <div id="re-authenticate-alert" class="alert hidden bg-error s-rounded x-padding v-margin">
             <span class="alert-message"></span>
           </div>
 
@@ -331,174 +336,235 @@
 
 <script data-task="change-password" type="javascript/blocked">
   {
-    type: "switch",
+    type: "multiTask",
     config: {
-      branches: {
-        default: {
-          tasks: [
-            {
-              type: "elementManipulator",
-              config: { "#change-password": { addClass: "disabled" } }
-            },
-            {
-              name: "changePassword",
-              type: "firebaseChangePassword",
-              config: {
-                password: { __template: "\{{jquery '#change-password-password' 'val'}}" },
-                passwordConfirm: { __template: "\{{jquery '#change-password-confirm' 'val'}}" }
-              }
-            },
-            {
-              __doNotCompile: true,
-              type: "switch",
-              config: {
-                which: { __template: "\{{#if errors.changePassword}}error\{{/if}}" },
-                branches: {
-                  default: {
-                    tasks: [
-                      {
-                        type: "run",
-                        config: { code: "window.location.href = '/account'" }
-                      }
-                    ]
-                  },
-                  error: {
-                    tasks: [
-                      {
-                        type: "elementManipulator",
-                        config: {
-                          "#change-password-alert": { removeClass: "hidden" },
-                          "#change-password-alert .alert-message": { contents: { __template: "\{{errors.changePassword.message}}" } }
-                        }
-                      }
-                    ]
+      tasks: [
+        {
+          type: "elementManipulator",
+          config: { "#change-password": { addClass: "disabled" } }
+        },
+        {
+          name: "changePassword",
+          type: "firebaseChangePassword",
+          config: {
+            password: { __template: "\{{jquery '#change-password-password' 'val'}}" },
+            passwordConfirm: { __template: "\{{jquery '#change-password-confirm' 'val'}}" }
+          }
+        },
+        {
+          __doNotCompile: true,
+          type: "switch",
+          config: {
+            which: { __template: "\{{#if errors.changePassword}}error\{{/if}}" },
+            branches: {
+              default: {
+                tasks: [
+                  {
+                    type: "run",
+                    config: { code: "window.location.href = '/account'" }
                   }
-                }
+                ]
+              },
+              error: {
+                tasks: [
+                  {
+                    type: "elementManipulator",
+                    config: {
+                      "#change-password-alert": { removeClass: "hidden" },
+                      "#change-password-alert .alert-message": { contents: { __template: "\{{errors.changePassword.message}}" } }
+                    }
+                  }
+                ]
               }
-            },
-            {
-              type: "elementManipulator",
-              config: { "#change-password": { removeClass: "disabled" } }
             }
-          ]
+          }
+        },
+        {
+          type: "elementManipulator",
+          config: { "#change-password": { removeClass: "disabled" } }
         }
-      }
+      ]
     }
   }
 </script>
 
 <script data-task="link-provider" type="javascript/blocked">
   {
-    type: "switch",
+    type: "multiTask",
     config: {
-      branches: {
-        default: {
-          tasks: [
-            {
-              type: "elementManipulator",
-              config: { "#link-unlink": { addClass: "disabled" } }
-            },
-            {
-              __doNotCompile: true,
-              name: "linkProvider",
-              type: "firebaseLinkProvider",
-              config: {
-                providerId: { __template: "\{{get (jquery rootElement 'data' (split 'post-auth-task-data')) 'providerId'}}" }
-              }
-            },
-            {
-              __doNotCompile: true,
-              type: "switch",
-              config: {
-                which: { __template: "\{{#if errors.linkProvider}}error\{{/if}}" },
-                branches: {
-                  default: {
-                    tasks: [
-                      {
-                        type: "run",
-                        config: { code: "window.location.href = '/account'" }
-                      }
-                    ]
-                  },
-                  error: {
-                    tasks: [
-                      {
-                        type: "elementManipulator",
-                        config: {
-                          "#link-provider-alert": { removeClass: "hidden" },
-                          "#link-provider-alert .alert-message": { contents: { __template: "\{{errors.linkProvider.message}}" } }
-                        }
-                      }
-                    ]
+      tasks: [
+        {
+          type: "elementManipulator",
+          config: { "#link-unlink": { addClass: "disabled" } }
+        },
+        {
+          __doNotCompile: true,
+          name: "linkProvider",
+          type: "firebaseLinkProvider",
+          config: {
+            providerId: { __template: "\{{get (jquery rootElement 'data' (split 'post-auth-task-data')) 'providerId'}}" }
+          }
+        },
+        {
+          __doNotCompile: true,
+          type: "switch",
+          config: {
+            which: { __template: "\{{#if errors.linkProvider}}error\{{/if}}" },
+            branches: {
+              default: {
+                tasks: [
+                  {
+                    type: "run",
+                    config: { code: "window.location.href = '/account'" }
                   }
-                }
+                ]
+              },
+              error: {
+                tasks: [
+                  {
+                    type: "elementManipulator",
+                    config: {
+                      "#link-provider-alert": { removeClass: "hidden" },
+                      "#link-provider-alert .alert-message": { contents: { __template: "\{{errors.linkProvider.message}}" } }
+                    }
+                  }
+                ]
               }
-            },
-            {
-              type: "elementManipulator",
-              config: { "#link-unlink": { removeClass: "disabled" } }
             }
-          ]
+          }
+        },
+        {
+          type: "elementManipulator",
+          config: { "#link-unlink": { removeClass: "disabled" } }
         }
-      }
+      ]
     }
   }
 </script>
 
 <script data-task="unlink-provider" type="javascript/blocked">
   {
-    type: "switch",
+    type: "multiTask",
     config: {
-      branches: {
-        default: {
-          tasks: [
-            {
-              type: "elementManipulator",
-              config: { "#link-unlink": { addClass: "disabled" } }
-            },
-            {
-              __doNotCompile: true,
-              name: "unlinkProvider",
-              type: "firebaseUnlinkProvider",
-              config: {
-                providerId: { __template: "\{{get (jquery rootElement 'data' (split 'post-auth-task-data')) 'providerId'}}" }
+      tasks: [
+        {
+          type: "elementManipulator",
+          config: { "#link-unlink": { addClass: "disabled" } }
+        },
+        {
+          __doNotCompile: true,
+          name: "unlinkProvider",
+          type: "firebaseUnlinkProvider",
+          config: {
+            providerId: { __template: "\{{get (jquery rootElement 'data' (split 'post-auth-task-data')) 'providerId'}}" }
+          }
+        },
+        {
+          __doNotCompile: true,
+          type: "switch",
+          config: {
+            which: { __template: "\{{#if errors.unlinkProvider}}error\{{/if}}" },
+            branches: {
+              default: {
+                tasks: [
+                  {
+                    type: "run",
+                    config: { code: "window.location.href = '/account'" }
+                  }
+                ]
+              },
+              error: {
+                tasks: [
+                  {
+                    type: "elementManipulator",
+                    config: {
+                      "#unlink-provider-alert": { removeClass: "hidden" },
+                      "#unlink-provider-alert .alert-message": { contents: { __template: "\{{errors.unlinkProvider.message}}" } }
+                    }
+                  }
+                ]
               }
-            },
-            {
-              __doNotCompile: true,
-              type: "switch",
-              config: {
-                which: { __template: "\{{#if errors.unlinkProvider}}error\{{/if}}" },
-                branches: {
-                  default: {
-                    tasks: [
-                      {
-                        type: "run",
-                        config: { code: "window.location.href = '/account'" }
-                      }
-                    ]
+            }
+          }
+        },
+        {
+          type: "elementManipulator",
+          config: { "#link-unlink": { removeClass: "disabled" } }
+        }
+      ]
+    }
+  }
+</script>
+
+<script data-task="delete-account" type="javascript/blocked">
+  {
+    type: "multiTask",
+    config: {
+      tasks: [
+        {
+          name: "deleteRequest",
+          type: "request",
+          config: { url: "/delete-user" }
+        },
+        {
+          __doNotCompile: true,
+          type: "switch",
+          config: {
+            which: { __template: "\{{#if errors.deleteRequest}}error\{{/if}}" },
+            branches: {
+              default: {
+                tasks: [
+                  {
+                    name: "firebaseDelete",
+                    type: "firebaseDeleteUser",
+                    config: {}
                   },
-                  error: {
-                    tasks: [
-                      {
-                        type: "elementManipulator",
-                        config: {
-                          "#unlink-provider-alert": { removeClass: "hidden" },
-                          "#unlink-provider-alert .alert-message": { contents: { __template: "\{{errors.unlinkProvider.message}}" } }
+                  {
+                    __doNotCompile: true,
+                    type: "switch",
+                    config: {
+                      which: { __template: "\{{#if errors.firebaseDelete}}error\{{/if}}" },
+                      branches: {
+                        default: {
+                          tasks: [
+                            {
+                              type: "run",
+                              config: { code: "window.location.href = '/'" }
+                            }
+                          ]
+                        },
+                        error: {
+                          halt: true,
+                          tasks: [
+                            {
+                              type: "elementManipulator",
+                              config: {
+                                "#delete-account-alert": { removeClass: "hidden" },
+                                "#delete-account-alert .alert-message": { contents: { __template: "\{{errors.firebaseDelete.message}}" } }
+                              }
+                            }
+                          ]
                         }
                       }
-                    ]
+                    }
                   }
-                }
+                ]
+              },
+              error: {
+                tasks: [
+                  {
+                    type: "elementManipulator",
+                    config: {
+                      "#delete-user-alert": { removeClass: "hidden" },
+                      "#delete-user-alert .alert-message": { contents: { __template: "\{{errors.deleteRequest.message}}" } }
+                    }
+                  }
+                ]
               }
-            },
-            {
-              type: "elementManipulator",
-              config: { "#link-unlink": { removeClass: "disabled" } }
             }
-          ]
+          }
         }
-      }
+      ]
     }
   }
 </script>
@@ -509,7 +575,10 @@
       tasks: [
         {
           type: "elementManipulator",
-          config: { "<.modal": { removeClass: "active" } }
+          config: {
+            "<.modal": { removeClass: "active" },
+            "<.modal | >.alert": { addClass: "hidden" }
+          }
         }
       ]
     }
