--- a/configuration/templates/account/sign-in.hbs
+++ b/configuration/templates/account/sign-in.hbs
@@ -3,7 +3,7 @@
     Welcome back! Please sign in
   </h1>
   <div class="l-margin r-margin">
-    <div class="x-padding-full" id="sign-in-message">
+    <div class="bg-error s-rounded x-padding v-margin" id="sign-in-message">
       <span id="form-message"></span>
     </div>
   </div>
