--- a/configuration/templates/account/sign-up.hbs
+++ b/configuration/templates/account/sign-up.hbs
@@ -3,7 +3,7 @@
     Sign up
   </h1>
   <div class="l-margin r-margin">
-    <div id="sign-up-message">
+    <div class="bg-error s-rounded x-padding v-margin" id="sign-up-message">
       <span id="form-message"></span>
     </div>
   </div>
