--- a/configuration/templates/pages/contact.hbs
+++ b/configuration/templates/pages/contact.hbs
@@ -31,6 +31,7 @@
   <div class="columns col-gapless">
     {{#each @root.context.metaData.tsiList ~}}
     {{#each contacts ~}}
+    {{#compare @key "all" ~}}
     <div class="col-4">
       <div class="card">
         <div class="card-header">
@@ -66,6 +67,7 @@
         </div>
       </div>
     </div>
+    {{/compare ~}}
     {{/each ~}}
     {{/each ~}}
   </div>
