--- a/configuration/templates/account/sign-up-admin.hbs
+++ b/configuration/templates/account/sign-up-admin.hbs
@@ -41,7 +41,57 @@
   <input type="hidden" name="redirect" id="redirect" value="home" />
 </form>
 
-<script type="text/javascript">
+<script type="javascript/blocked" data-component-config="sign-up">
+  {
+    submit: {
+      preventDefault: true,
+      tasks: [
+        {
+          type: "elementManipulator",
+          config: { ">": { addClass: "disabled" } }
+        },
+        {
+          name: "signUp",
+          type: "firebaseCreateAccount",
+          config: {
+            email: { __template: '\{{jquery "#sign-up-email" "val"}}' },
+            emailConfirm: { __template: '\{{jquery "#sign-up-email-confirm" "val"}}' },
+            password: { __template: '\{{jquery "#sign-up-password" "val"}}' },
+            passwordConfirm: { __template: '\{{jquery "#sign-up-password-confirm" "val"}}' }
+          }
+        },
+        {
+          type: "switch",
+          config: {
+            which: { __template: "\{{#if errors.signUp}}error\{{/if}}" },
+            branches: {
+              default: {},
+              error: {
+                halt: true,
+                tasks: [
+                  {
+                    type: "elementManipulator",
+                    config: {
+                      ">": { removeClass: "disabled" },
+                      "#sign-up-message": { styles: { display: "block" } },
+                      "#form-message": { contents: { __template: "\{{errors.signUp.message}}" } }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        },
+        {
+          type: "run",
+          config: { code: "window.location.href = '/set-temp-admin/'" }
+        }
+      ]
+    }
+  }
+</script>
+
+{{!-- <script type="text/javascript">
   document.addEventListener("DOMContentLoaded", function(event) {
     var $form = $('#sign-up-form');
     var $message = $('#sign-up-message');
@@ -98,4 +148,4 @@
     }
 
   })
-</script>
+</script> --}}
